--- a/style.css
+++ b/style.css
@@ -12,10 +12,22 @@ body {
 html {
   font-size: 10px;
 }
+.animation {
+  display: grid;
+  align-items: center;
+  margin-bottom: 20px;
+  & {
+    * {
+      grid-row: 1/2;
+      grid-column: 1/2;
+    }
+  }
+}
+
 #spin-animation {
   margin: 0 auto;
-  height: 25vw;
-  width: 25vw;
+  height: 30vw;
+  width: 30vw;
   border: 5px solid #dddddc28;
   border-radius: 50%;
   position: relative;
@@ -23,8 +35,8 @@ html {
   animation-play-state: paused;
 }
 .circle {
-  width: 10px;
-  height: 10px;
+  width: 12px;
+  height: 12px;
   background-color: rgb(206, 170, 9);
   position: absolute;
   border-radius: 50%;
@@ -42,8 +54,10 @@ html {
 }
 
 .time {
-  font-size: 3rem;
-  margin-block: 20px;
+  font-size: 2.3rem;
+}
+.miliseconds {
+  font-size: 1.3rem;
 }
 
 .controls button {
@@ -69,7 +83,7 @@ html {
   background-color: rgba(0, 0, 0, 0.815);
 }
 #lap {
-  background-color: rgb(33, 150, 243);
+  background-color: rgb(192, 157, 2);
 }
 button {
   color: rgb(240, 239, 239);
@@ -110,6 +124,6 @@ button {
   .circle {
     width: 15px;
     height: 15px;
-    top: -4%;
+    top: -3%;
   }
 }
